[FIX] web: avoid a scrollbar when a carousel is added in pages
On Chrome, the browser displayed an horizontal scrollbar because the
sr-only item inside the 'next' arrow was positioned absolutely, outside
of the arrow, and thus outside of the window. This happened for the
website carousel snippet when added in pages for instance.

opw-2585526

closes odoo/odoo#74225

X-original-commit: 904a04348ef5767e33d5c7a3e491cd8f6cdcd7f7

--- a/addons/web/static/src/scss/bootstrap_review.scss
+++ b/addons/web/static/src/scss/bootstrap_review.scss
@@ -76,3 +76,7 @@
 .btn:not(:disabled):not(.disabled) {
     cursor: pointer;
 }
+
+.carousel-control-next .sr-only {
+    left: 50%; // Avoid horizontal scrollbar in Chrome
+}
